--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -7,7 +7,7 @@
         <link href="{{STATIC_URL}}css/bk.{{CSS_SUFFIX}}" rel="stylesheet" type="text/css" />
         <link href="{{STATIC_URL}}assets/bk-icon-2.0/iconfont.css" rel="stylesheet" type="text/css" />
         <link href="{{STATIC_URL}}css/login.{{CSS_SUFFIX}}?v={{STATIC_VERSION}}" rel="stylesheet" type="text/css" />
-        <title>{% trans '登录|蓝鲸智云' %}</title>
+        <title>{% trans '登录|清石智能IT管理系统' %}</title>
     </head>
     <body>
         <div class="page-content">
